[gd_scene load_steps=2 format=3 uid="uid://cs5hvkfbbw2yn"]

[ext_resource type="Script" path="res://scripts/card_test_scene.gd" id="1_8fkxs"]

[node name="CardTestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8fkxs")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.0784314, 0.12549, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Neon Dominance - Card Display Test"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="Panel" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Runner Actions"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DrawCardButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Draw Card"

[node name="PlayCardButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Selected Card"

[node name="DiscardButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Discard Selected Card"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ToggleViewButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Toggle Compact View"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CardInfoLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][b]Card Info[/b][/center]
Select a card to view details."

[node name="MainPanel" type="Panel" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HSplitContainer/MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/MainPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Board"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HSplitContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayAreaLabel" type="Label" parent="VBoxContainer/HSplitContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Area"

[node name="PlayArea" type="Panel" parent="VBoxContainer/HSplitContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="HandArea" type="Panel" parent="VBoxContainer/HSplitContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="HandLabel" type="Label" parent="VBoxContainer/HSplitContainer/MainPanel/MarginContainer/VBoxContainer/HandArea"]
layout_mode = 2
offset_right = 45.0
offset_bottom = 23.0
text = "Hand"

[node name="HandContainer" type="Control" parent="VBoxContainer/HSplitContainer/MainPanel/MarginContainer/VBoxContainer/HandArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="FooterPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/FooterPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Drag cards to the play area to play them"
horizontal_alignment = 1
